0.04001 2009-04-15

    - New RequestToken feature to stop double-submissions of data.
    
    - Silence "Reference is already weak" warnings.
    
    - Add distribution description to pod (RT #41568)

0.03007 2008-12-08

    - Bump required version no. of HTML-FormFu to 0.03007

0.03006 2008-12-03

    - Deprecated config setting $config->{config_file_path}
      use $config->{constructor}{config_file_path} instead.
    
    - Bumped HTML-FormFu prereq - need 0.03004 for load_config_filestem()
      support.

0.03004 2008-09-03

    - 'config_file_ext' config setting has been removed.
    
    - Automatically search for form config files with any extension
      supported by Config::Any.
    
    - Add __config()__ callback.
    
    - Support filestems (without extensions) in the FormConfig('file')
      attribute syntax.
    
    - Forms returned by form() now have the query set with the Catalyst
      request object.
    
    - Switched from ACCEPT_CONTEXT to using
      Catalyst::Component::InstancePerContext - recommended by mst.
    
    - Changed config examples to Config::General, to match Catalyst's
      core documentation.

0.03000 2008-06-19

	- Documented 'model_stash' option.
	- New Multi* actions - not documented yet - need further testing.

0.02000 2007-12-12

	- Only set INCLUDE_PATH if it's not already set, and if 'root/formfu' 
	  exists.
	- Use of $form->render_class_args() changed to tt_args()
	- Added support for expanding __path_to()__ in config callback

0.01002 2007-09-12

	- No longer use HTML::FormFu::Preload - tradeoff CPU for RAM
	- Fix circular reference / memory leak

0.01001	2007-08-22

	- First CPAN release